--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
         </div>
     </nav>
 
-    <!-- Home Section -->
-    <section id="home" class="text-center text-white" style="background-image: url('https://source.unsplash.com/1600x900/?coffee'); background-size: cover; padding: 100px;">
-        <div class="container">
-            <h1 class="display-3">Welcome to Coffee Corner</h1>
-            <p class="lead">Your perfect cup of coffee is just a click away</p>
-        </div>
-    </section>
+   <!-- Home Section -->
+<section id="home" class="text-center text-white" style="background-image: url(./img.png); background-size: cover; padding: 150px 0; height: 100vh;">
+    <div class="container">
+        <h1 class="display-3">Welcome to Coffee Corner</h1>
+        <p class="lead">Your perfect cup of coffee is just a click away</p>
+    </div>
+</section>
+
 
     <!-- Menu Section -->
     <section id="menu" class="py-5 bg-light">
@@ -47,7 +48,7 @@
             <div class="row mt-4">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://source.unsplash.com/500x300/?latte" class="card-img-top" alt="Latte">
+                        <img src="./images.jpeg" class="card-img-top" alt="Latte">
                         <div class="card-body">
                             <h5 class="card-title">Latte</h5>
                             <p class="card-text">A rich espresso with steamed milk, perfect for any coffee lover.</p>
@@ -56,7 +57,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://source.unsplash.com/500x300/?coffee" class="card-img-top" alt="Cappuccino">
+                        <img src="./cappuccino.png" class="card-img-top" alt="Cappuccino">
                         <div class="card-body">
                             <h5 class="card-title">Cappuccino</h5>
                             <p class="card-text">A classic coffee with equal parts espresso, steamed milk, and foam.</p>
@@ -65,7 +66,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://source.unsplash.com/500x300/?americano" class="card-img-top" alt="Americano">
+                        <img src="./americano.png" class="card-img-top" alt="Americano">
                         <div class="card-body">
                             <h5 class="card-title">Americano</h5>
                             <p class="card-text">Espresso mixed with hot water for a bold and smooth flavor.</p>
